[package]
name = "security-lab-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid="0.7.0"
zip = "0.6.2"
blake2 = "0.10"
winapi = { version = "0.3.9", features = ["securitybaseapi", "winbase", "fileapi", "errhandlingapi"] }